--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>net.openhft</groupId>
                 <artifactId>chronicle-bom</artifactId>
-                <version>1.11.17-SNAPSHOT</version>
+                <version>1.12.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
